--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@ futures = "0.1"
 log = "0.4"
 pretty_env_logger = "0.2"
 r2d2 = "*"
-uuid = { version = "*", features = ["v4"] }
 
 [dependencies.diesel]
 features = ["postgres", "r2d2"]
 version = "1.0.0"
+
+[dependencies.uuid]
+features = ["v4"]
+version = "*"
