--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ futures = "0.1"
 log = "0.4"
 pretty_env_logger = "0.2"
 r2d2 = "*"
+serde = "*"
+serde_derive = "*"
+serde_json = "*"
 
 [dependencies.diesel]
 features = ["postgres", "r2d2"]
