--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-    "name": "ttr",
-    "version": "0.0.1",
-    "scripts": {
-        "clean": "bsb -clean",
-        "clean:all": "bsb -clean-world",
-        "build:bsb": "bsb -make-world",
-        "build:js": "rollup -c",
-        "serve": "basic-http-server release",
-        "build": "run-s build:bsb build:js",
-        "watch:bsb": "bsb -make-world -w",
-        "watch:js": "rollup -c -w",
-        "watch": "run-p watch:bsb watch:js serve",
-        "start": "run-s watch"
-    },
-    "keywords": [
-        "Bucklescript"
-    ],
-    "devDependencies": {
-        "bs-platform": "^4.0.5",
-        "bucklescript-tea": "^0.7.5",
-        "npm-run-all": "^4.1.3",
-        "rollup": "^0.66.0",
-        "rollup-plugin-livereload": "^0.6.0",
-        "rollup-plugin-node-resolve": "^3.4.0"
-    }
+  "name": "ttr",
+  "version": "0.0.1",
+  "description": "Take the Rock",
+  "main": "index.js",
+  "repository": "https://github.com/deciduously/ttr",
+  "author": "deciduously <ben@deciduously.com>",
+  "license": "MIT",
+  "private": false,
+  "dependencies": {
+    "express": "^4.16.3",
+    "mobx": "^5.5.0",
+    "mobx-preact": "^3.0.0",
+    "preact": "^8.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^10.11.4",
+    "ts-loader": "^5.2.1",
+    "typescript": "^3.1.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no tests installed\" && exit 1",
+    "build": "webpack --config webpack.config.js --mode=production",
+    "build:dev": "webpack --config webpack.config.js --mode=development",
+    "watch": "webpack --config webpack.config.js --mode=development --watch",
+    "start": "cargo watch -x run"
+  }
 }
