name that works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./dist/",
     "module": "commonjs",
     "noImplicitAny": false,
+    "strict": true,
     "experimentalDecorators": true,
     "removeComments": true,
     "sourceMap": true,
