--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^3.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no tests installed\" && exit 1",
+    "lint:ts": "tslint -c tslint.json 'src/frontend/**/*.{ts,tsx}'",
     "build": "webpack --config webpack.config.js --mode=production",
     "build:dev": "webpack --config webpack.config.js --mode=development",
     "watch": "webpack --config webpack.config.js --mode=development --watch",
