--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "css-loader": "^1.0.0",
     "style-loader": "^0.23.0",
     "ts-loader": "^5.2.1",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "lint:ts": "tslint -c tslint.json 'src/frontend/**/*.{ts,tsx}'",
