--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
   "devDependencies": {
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
+    "@types/webpack": "^4.4.16",
+    "@types/webpack-env": "^1.13.6",
+    "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "object-assign": "^4.1.1",
+    "semantic-ui-react": "^0.82.5",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
-    "ts-loader": "^5.2.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
